# mlforge

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  cvat.py  datasets.py  health.py  jobs.py  models.py  processing.py  training.py
backend/app/core/: config.py  errors.py
backend/app/domain/jobs/: manager.py  registry.py
backend/app/domain/schemas/: auth.py  cvat.py  dataset.py  job.py  processing.py  training.py
backend/app/ml/: device.py  progress.py  yolo_trainer.py
backend/app/services/: auth_service.py  cvat_service.py  dataset_service.py  image_transforms.py  processing_service.py  training_service.py
backend/app/utils/: dataset_utils.py  file_utils.py  yaml_utils.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_auth_routes.py  test_cvat_routes.py  test_dataset_routes.py  test_processing_routes.py  test_training_routes.py
backend/tests/unit/: test_dataset_utils.py  test_job_manager.py  test_job_registry.py  test_settings.py  test_yaml_utils.py  test_yolo_trainer_callback.py
docker/cvat/: docker-compose.yml
docs/: architecture.md  cvat-integration.md  development.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.test.ts  client.ts  cvat.test.ts  cvat.ts  datasets.ts  models.ts  processing.ts  training.ts  types.ts
frontend/src/constants/: routes.ts
(+34 files in other folders)
