[project]
name = "mlforge-backend"
version = "0.1.0"
description = "MLForge training backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "torch>=2.3",
    "torchvision>=0.18",
    "ultralytics>=8.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow / requiring a real training run (deselect with -m 'not slow')",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
